...
					tabBarTestID: 'trackTab'
				}}
			/>
			<BottomTabs.Screen
				name="Search"
				component={SearchScreen}
				options={{ tabBarIcon: iconProvider('Search'), tabBarTestID: 'searchTab' }}
			/>
			<BottomTabs.Screen
				name="Radio"
				component={Radio}
				options={{ tabBarIcon: iconProvider('Radio'), tabBarTestID: 'radioTab' }}
			/>
...
