...
						onPressCancel={() => setModal({ ...modal, visible: false })}
					/>
				</View>
			);
		}
		return (
			<MessageWrapper testID='notFoundMessage'>
				<Message numberOfLines={2}>
					{"Oops! SoundSpice couldn't find any music on your device"}
				</Message>
			</MessageWrapper>
		);
	}
...
